--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -8,7 +8,7 @@
 
   <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
   <meta name="description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   <meta name="keywords"
     content="психолог онлайн тревожность, психотерапия тревоги онлайн, приступы тревоги психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
@@ -29,7 +29,7 @@
   <meta property="og:url" content="http://localhost:1313/v/a/">
   <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   
   
   <meta property="og:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -43,7 +43,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками.">
   
   
   <meta name="twitter:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -128,7 +128,7 @@
             "name": "Сколько займёт времени?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Краткосрочная работа: 8-15 сессий (2-4 месяца при частоте 1 раз в неделю). Первые улучшения обычно после 3-4 сессий."
+              "text": "КПТ — краткосрочный метод, фокусируется на конкретных целях. Длительность зависит от вашей ситуации, обсуждается на вводной встрече."
             }
           },
           {
@@ -144,7 +144,7 @@
             "name": "Чем КПТ отличается от других методов?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "КПТ фокусируется на мыслях и поведении, краткосрочна (8-15 сессий), имеет доказательную базу и структурирована с измерением прогресса."
+              "text": "КПТ фокусируется на мыслях и поведении, краткосрочный метод с доказательной базой, структурирован с измерением прогресса."
             }
           },
           {
@@ -289,14 +289,14 @@
   <section class="hero" data-block="hero">
   <div class="hero__container">
     <div class="hero__content">
-      <h1 class="hero__title">Освободитесь от тревоги за 8-12 сессий по доказательному методу</h1>
+      <h1 class="hero__title">Психолог онлайн. Помогаю справиться с сильной тревогой и вернуть спокойствие.</h1>
 
-      <p class="hero__subtitle">8 из 10 клиентов значительно снижают уровень тревоги уже через 2 месяца</p>
+      <p class="hero__subtitle">Структурная работа в КПТ-подходе: понятные шаги, практические упражнения и поддержка. Помогу разобраться в причинах беспокойства и научиться управлять своим состоянием.</p>
 
       <div class="hero__badges">
         <span class="badge">Конфиденциально</span>
         <span class="badge">Только онлайн</span>
-        <span class="badge">Ответ в течение 2 часов</span>
+        <span class="badge">Вводная встреча 30 минут (бесплатно)</span>
       </div>
 
       <div class="hero__cta">
@@ -319,54 +319,42 @@
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Постоянное беспокойство о будущем, даже по мелочам
+        Постоянное беспокойство, которое сложно «выключить»
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Приступы тревоги — сердцебиение, нехватка воздуха, страх умереть
+        Внезапные приступы сильной тревоги и страха
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Трудности с засыпанием из-за потока тревожных мыслей
+        Трудности с засыпанием из-за потока навязчивых мыслей
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Избегание людей, мест или ситуаций из-за страха
+        Избегание привычных мест или общения из-за внутреннего дискомфорта
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Постоянное напряжение в теле — боли в шее, спине, желудке
+        Постоянное чувство напряжения и невозможность расслабиться
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Сложности с концентрацией на работе или в учебе
-      </li>
-      <li class="symptom-item">
-        <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-        </svg>
-        Раздражительность и быстрая утомляемость
-      </li>
-      <li class="symptom-item">
-        <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-        </svg>
-        Страх потерять контроль или «сойти с ума»
+        Сложности с концентрацией на работе или повседневных делах
       </li>
     </ul>
 
     <div class="symptoms__cta">
-      <p class="symptoms__cta-text">Если отметили 3+ пунктов — запишитесь на бесплатную диагностику (30 минут)</p>
+      <p class="symptoms__cta-text">Если это про вас — запишитесь на вводную встречу (30 минут, бесплатно)</p>
       <a href="#cta-final" class="btn btn--primary"
          data-cta="scroll-to-cta" data-position="symptoms">
         Записаться
@@ -380,35 +368,31 @@
   <section class="benefits" data-block="benefits">
   <div class="container">
     <h2 class="section__title">Как помогает консультирование</h2>
-    <p class="section__subtitle">Что изменится через 8-12 встреч</p>
+    <p class="section__subtitle">Чему вы научитесь в процессе работы</p>
 
     <div class="benefits__grid">
       <div class="benefit-card">
-        <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Снижение тревоги</h3>
-        <p class="benefit-card__description">Клиенты отмечают значительное снижение тревожности с 8-9 баллов до 2-3
-          баллов по шкале оценки после курса консультаций. Вы перестанете постоянно беспокоиться о будущем.</p>
+        <div class="benefit-card__number">1</div>
+        <h3 class="benefit-card__title">Понимание механизмов тревоги</h3>
+        <p class="benefit-card__description">Разберем, как возникают ваши реакции и что поддерживает состояние беспокойства.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Контроль над приступами тревоги</h3>
-        <p class="benefit-card__description">Приступы либо прекращаются полностью, либо становятся редкими и
-          управляемыми. Вы знаете, как справляться с симптомами.</p>
+        <div class="benefit-card__number">2</div>
+        <h3 class="benefit-card__title">Навыки саморегуляции</h3>
+        <p class="benefit-card__description">Освоите техники, которые помогают стабилизироваться в моменте и возвращать самообладание.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Улучшение сна</h3>
-        <p class="benefit-card__description">Засыпаете за 15-20 минут вместо часов беспокойных мыслей. Сон становится
-          глубоким и восстанавливающим.</p>
+        <div class="benefit-card__number">3</div>
+        <h3 class="benefit-card__title">Работа с мыслями</h3>
+        <p class="benefit-card__description">Научитесь замечать автоматические мысли, которые усиливают тревогу, и менять их на более адаптивные.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Навыки управления стрессом</h3>
-        <p class="benefit-card__description">Получаете конкретные техники, которые работают в сложных ситуациях — на
-          работе, в отношениях, в повседневной жизни.</p>
+        <div class="benefit-card__number">4</div>
+        <h3 class="benefit-card__title">Инструменты на будущее</h3>
+        <p class="benefit-card__description">Составим план действий для сложных ситуаций, чтобы вы чувствовали себя уверенно и после завершения встреч.</p>
       </div>
     </div>
 
@@ -417,8 +401,7 @@
         <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
       </div>
       <p class="method-description">
-        Научно обоснованный метод работы с тревожными расстройствами.
-        <strong>8 из 10 клиентов</strong> отмечают значительное улучшение за 8-12 сессий.
+        Научно обоснованный метод работы с тревожными состояниями, рекомендованный ВОЗ.
       </p>
     </div>
   </div>
@@ -441,16 +424,7 @@
 
       <div class="about__info">
         <div class="about__bio">
-          <p>Меня зовут Ксения, я клинический и кризисный психолог, психотерапевт с большим опытом работы с тревожными
-            расстройствами.</p>
-
-          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — научно обоснованном методе работы с
-            тревогой и паническими атаками, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
-            отмечают значительное снижение тревоги после курса консультаций. Помогла более 200 клиентам вернуть контроль над
-            своей жизнью.</p>
-
-          <p>Работаю только онлайн, что позволяет вам получать помощь из любой точки мира в комфортной и безопасной
-            обстановке. Конфиденциальность гарантирована — используем защищенные каналы связи.</p>
+          <p>Меня зовут Ксения, я психолог. Специализируюсь на когнитивно-поведенческом подходе (КПТ) — структурном методе работы с тревожными состояниями и приступами страха. Мой стиль работы — бережный и последовательный. Помогаю клиентам пересмотреть привычные реакции и вернуть качество жизни.</p>
         </div>
 
         <div class="about__credentials">
@@ -482,7 +456,7 @@
                   d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
               <h4>Краткосрочность</h4>
-              <p>КПТ даёт результаты за 8-15 сессий, а не годы «разговоров о детстве».</p>
+              <p>КПТ — краткосрочный метод, фокусируется на конкретных целях и измеримых результатах.</p>
             </div>
 
             <div class="principle">
@@ -836,7 +810,7 @@
           <li>Действует 3 месяца</li>
           <li>Приоритетная запись на удобное время</li>
           <li>Поддержка между сессиями (текстовые вопросы)</li>
-          <li>Гарантия результата или возврат средств*</li>
+          <li>Прозрачные условия работы и поддержка на каждом этапе</li>
           <li>Возможна оплата в любой валюте по договорённости</li>
         </ul>
 
@@ -859,8 +833,7 @@
         <li><strong>Оплата:</strong> Перевод на карту, СБП или другие способы оплаты.</li>
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
-        <li><strong>* Гарантия:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
-          возвращаю часть стоимости пакета.</li>
+        <li><strong>* Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
       </ul>
     </div>
 
@@ -880,21 +853,16 @@
       <div class="faq-item">
         <h3 class="faq-item__question">А если не поможет?</h3>
         <div class="faq-item__answer">
-          <p>КПТ — научно обоснованный метод работы с тревожными расстройствами, подтвержденный сотнями
-            исследований. Но важно понимать: результат зависит не только от терапевта, но и от вашего участия.</p>
-          <p>Если вы будете посещать сессии регулярно, выполнять домашние задания и открыто обсуждать трудности — шансы
-            на успех очень высоки. Если после 5 сессий вы не видите прогресса, мы обсудим это и при необходимости
-            скорректируем план или вернем часть стоимости пакета.</p>
+          <p>КПТ считается одним из самых эффективных подходов в мировой практике консультирования. На бесплатной вводной встрече мы поймем, подходит ли этот метод именно вам.</p>
         </div>
       </div>
 
       <div class="faq-item">
         <h3 class="faq-item__question">Сколько времени займет работа?</h3>
         <div class="faq-item__answer">
-          <p>Большинство клиентов видят значительное улучшение за 8-12 сессий (2-3 месяца при еженедельных встречах).
-            Это одно из главных преимуществ КПТ перед другими методами — она краткосрочная и результативная.</p>
-          <p>Конечно, все индивидуально. При легкой тревоге может хватить 6-8 встреч. При приступах тревоги с избегающим
-            поведением может потребоваться 12-15 сессий. На диагностической встрече я дам более точный прогноз для
+          <p>КПТ — краткосрочный метод, фокусируется на конкретных целях и измеримых результатах.
+            Это одно из главных преимуществ КПТ перед другими методами.</p>
+          <p>Длительность работы индивидуальна и зависит от вашей ситуации. На диагностической встрече я дам более точный прогноз для
             вашего случая.</p>
         </div>
       </div>
@@ -929,16 +897,7 @@
       <div class="faq-item">
         <h3 class="faq-item__question">5000&nbsp;₽ за час — не дорого ли?</h3>
         <div class="faq-item__answer">
-          <p>Давайте посчитаем. Полный курс консультаций
-            при тревоге (10 сессий) — это 45000&nbsp;₽ при покупке пакета.</p>
-          <p>Сравните с альтернативами:</p>
-          <ul>
-            <li>Годы посещения обычного психолога без результата — 200&nbsp;000 - 500&nbsp;000&nbsp;₽</li>
-            <li>Лекарства от тревоги (временный эффект, побочки) — 5&nbsp;000-10&nbsp;000&nbsp;₽/месяц бесконечно</li>
-            <li>Потеря работоспособности из-за приступов тревоги — бесценно</li>
-          </ul>
-          <br>
-          <p>КПТ — это инвестиция в себя, которая окупается здоровьем и качеством жизни.</p>
+          <p><strong>Инвестиция в свое спокойствие окупается качеством жизни и продуктивностью.</strong> Мы работаем на результат, который вы сможете поддерживать сами.</p>
         </div>
       </div>
     </div>
