--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -8,7 +8,7 @@
 
   <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
   <meta name="description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   <meta name="keywords"
     content="психолог онлайн тревожность, психотерапия тревоги онлайн, приступы тревоги психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
@@ -27,7 +27,7 @@
   <meta property="og:url" content="http://localhost:1313/v/b/">
   <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   
   
   <meta property="og:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
-    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод.">
+    content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками.">
   
   
   <meta name="twitter:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -153,19 +153,19 @@
   <section class="hero" data-block="hero">
     <div class="hero__container">
       <div class="hero__content">
-        <h1 class="hero__title">Представьте: вы просыпаетесь без тяжести в груди</h1>
+        <h1 class="hero__title">Представьте: вы просыпаетесь с ощущением ясности и легкости.</h1>
 
-        <p class="hero__subtitle">Через 2-3 месяца это станет вашей реальностью. Не через годы консультаций — через 8-12 встреч.</p>
+        <p class="hero__subtitle">Это достижимо через последовательную работу с психологом. В подходе КПТ мы не просто говорим, а внедряем конкретные навыки, которые помогают справляться с тревогой в реальной жизни.</p>
 
         <div class="hero__badges">
-          <span class="badge">847 человек уже прошли этот путь</span>
+          <span class="badge">Конфиденциально</span>
           <span class="badge">Онлайн из любой точки мира</span>
         </div>
 
         <div class="hero__cta">
-          <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику"
+          <a href="#cta-final" class="btn btn--primary" aria-label="Узнать формат и стоимость"
              data-cta="scroll-to-cta" data-position="hero">
-            Начать путь к спокойствию
+            Узнать формат и стоимость
           </a>
         </div>
       </div>
@@ -179,8 +179,7 @@
 
       <div class="empathy-block" style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px; margin-bottom: 32px;">
         <p style="font-size: 18px; line-height: 1.7; margin-bottom: 16px;">
-          Просыпаться с тревогой. Избегать звонков, встреч, решений. Перебирать в голове худшие сценарии.
-          Чувствовать, что сердце вот-вот выпрыгнет — без причины.
+          Просыпаться с тревогой. Избегать звонков, встреч, решений. Перебирать в голове худшие сценарии. Ощущать постоянное напряжение, которое не отпускает.
         </p>
         <p style="font-size: 18px; line-height: 1.7; font-weight: 600;">
           Вы не сломаны. Вы не «слишком чувствительны». Ваш мозг просто застрял в режиме тревоги — и это можно исправить.
@@ -192,31 +191,37 @@
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Приступы тревоги — сердцебиение, нехватка воздуха, страх умереть
+          Постоянное беспокойство, которое сложно «выключить»
         </li>
         <li class="symptom-item">
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Избегание людей, мест или ситуаций из-за страха
+          Внезапные приступы сильной тревоги и страха
         </li>
         <li class="symptom-item">
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Бессонница из-за потока тревожных мыслей
+          Трудности с засыпанием из-за потока навязчивых мыслей
         </li>
         <li class="symptom-item">
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Постоянное напряжение — невозможно расслабиться
+          Избегание привычных мест или общения из-за внутреннего дискомфорта
         </li>
         <li class="symptom-item">
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Страх потерять контроль или «сойти с ума»
+          Постоянное чувство напряжения и невозможность расслабиться
+        </li>
+        <li class="symptom-item">
+          <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+          </svg>
+          Сложности с концентрацией на работе или повседневных делах
         </li>
       </ul>
 
@@ -237,21 +242,18 @@
 
       <div class="benefits__timeline" style="display: grid; gap: 24px; margin-bottom: 32px;">
         <div class="timeline-block" style="background: linear-gradient(135deg, #e8f4f8 0%, #d4e8ed 100%); padding: 24px; border-radius: 12px; border-left: 4px solid var(--color-primary, #0088cc);">
-          <h3 style="font-size: 20px; margin-bottom: 12px; color: var(--color-primary, #0088cc);">Через 2-4 недели</h3>
-          <ul style="list-style: none; padding: 0;">
-            <li style="padding: 8px 0;">✓ Приступы тревоги станут реже или прекратятся совсем</li>
-            <li style="padding: 8px 0;">✓ Вы научитесь «выключать» тревогу за 5-10 минут</li>
-            <li style="padding: 8px 0;">✓ Сон наладится — засыпание за 15-20 минут вместо часов</li>
-          </ul>
+          <h3 style="font-size: 20px; margin-bottom: 12px; color: var(--color-primary, #0088cc);">На первых этапах</h3>
+          <p style="padding: 8px 0;">Появится понимание причин вашего состояния, освоите базовые техники снижения напряжения, почувствуете больше контроля.</p>
         </div>
 
         <div class="timeline-block" style="background: linear-gradient(135deg, #e8f8e8 0%, #d4edd4 100%); padding: 24px; border-radius: 12px; border-left: 4px solid #25D366;">
-          <h3 style="font-size: 20px; margin-bottom: 12px; color: #25D366;">Через 2-3 месяца</h3>
-          <ul style="list-style: none; padding: 0;">
-            <li style="padding: 8px 0;">✓ Уровень тревоги значительно снизится (с 8-9 до 2-3 баллов)</li>
-            <li style="padding: 8px 0;">✓ Вы вернёте контроль над своей жизнью</li>
-            <li style="padding: 8px 0;">✓ Получите навыки, которые останутся с вами навсегда</li>
-          </ul>
+          <h3 style="font-size: 20px; margin-bottom: 12px; color: #25D366;">В процессе работы</h3>
+          <p style="padding: 8px 0;">Приступы тревоги станут менее интенсивными, вернется способность принимать решения без страха, наладится сон.</p>
+        </div>
+
+        <div class="timeline-block" style="background: linear-gradient(135deg, #f8f4e8 0%, #ede8d4 100%); padding: 24px; border-radius: 12px; border-left: 4px solid #FFA500;">
+          <h3 style="font-size: 20px; margin-bottom: 12px; color: #FFA500;">Результат</h3>
+          <p style="padding: 8px 0;">Вы получите набор инструментов для самостоятельного управления стрессом, которые останутся с вами навсегда.</p>
         </div>
       </div>
 
@@ -281,21 +283,20 @@
           </div>
           <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Анна, 32 года — приступы тревоги</div>
           <div style="display: grid; gap: 12px;">
-            <div><strong>До:</strong> 3-4 приступа тревоги в неделю, не могла ездить в метро</div>
-            <div><strong>После 10 сессий:</strong> приступы прекратились полностью, вернулась на работу</div>
-            <div style="color: #25D366; font-weight: 600;">8 месяцев спустя: рецидивов нет</div>
+            <div><strong>До:</strong> Приступы тревоги, не могла ездить в метро</div>
+            <div><strong>После работы:</strong> приступы прекратились полностью, вернулась на работу</div>
+            <div style="color: #25D366; font-weight: 600;">Со временем: рецидивов нет</div>
           </div>
         </div>
 
         <div class="testimonial-card-b" style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px;">
           <div style="font-size: 24px; font-weight: 700; color: var(--color-primary, #0088cc); margin-bottom: 8px;">
-            «С 9 до 2 по шкале тревоги»
+            «Значительное снижение тревоги»
           </div>
-          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Дмитрий, 28 лет — генерализованное тревожное расстройство</div>
+          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Дмитрий, 28 лет — постоянная тревога</div>
           <div style="display: grid; gap: 12px;">
             <div><strong>До:</strong> постоянная тревога обо всём, бессонница</div>
-            <div><strong>После 12 сессий:</strong> тревога 2/10, сон нормализовался</div>
-            <div style="color: #25D366; font-weight: 600;">Срок: 3 месяца</div>
+            <div><strong>После работы:</strong> тревога значительно снизилась, сон нормализовался</div>
           </div>
         </div>
 
@@ -306,8 +307,8 @@
           <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Екатерина, 41 год — социальная тревога</div>
           <div style="display: grid; gap: 12px;">
             <div><strong>До:</strong> страх совещаний, избегание презентаций</div>
-            <div><strong>После 15 сессий:</strong> выступила на конференции, получила повышение</div>
-            <div style="color: #25D366; font-weight: 600;">Тревога: 3/10 вместо 8/10</div>
+            <div><strong>После работы:</strong> выступила на конференции, получила повышение</div>
+            <div style="color: #25D366; font-weight: 600;">Тревога значительно снизилась</div>
           </div>
         </div>
 
@@ -341,18 +342,17 @@
         <div class="about__info">
           <div class="about__bio">
             <p style="font-size: 18px; margin-bottom: 16px;">
-              <strong>Я — Ксения Парваткина</strong>, и за свою практику я помогла более чем 500 людям выбраться из тревоги.
-              Не бесконечными разговорами о детстве, а конкретными техниками, которые работают.
+              <strong>Я — Ксения Парваткина</strong>, психолог, специализируюсь на когнитивно-поведенческой терапии (КПТ) — структурном методе работы с тревожными состояниями.
             </p>
           </div>
 
           <div class="about__credentials" style="background: var(--color-bg-light, #f8f9fa); padding: 20px; border-radius: 12px; margin-bottom: 20px;">
             <h3 class="credentials__title">Квалификация</h3>
             <ul class="credentials__list">
-              <li><strong>8 лет</strong> частной практики, <strong>500+</strong> завершённых терапий</li>
               <li>Магистр психологии, <strong>МИП</strong></li>
               <li>Диплом по <strong>КПТ</strong> (когнитивно-поведенческая терапия)</li>
-              <li>Специализация: тревожные расстройства, приступы тревоги, ОКР</li>
+              <li>Диплом кризисной психологии</li>
+              <li>Специализация: тревожные состояния</li>
             </ul>
           </div>
 
@@ -372,8 +372,8 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-                <h4>Быстро</h4>
-                <p>8-15 сессий, не годы консультаций.</p>
+                <h4>Краткосрочность</h4>
+                <p>КПТ — краткосрочный подход, не годы консультаций.</p>
               </div>
 
               <div class="principle">
@@ -419,8 +419,7 @@
           <div class="step__content">
             <h3 class="step__title">Индивидуальный план</h3>
             <p class="step__description">
-              На первой полной сессии (60 минут) определим конкретную цель: «снизить тревогу с 8/10 до 3/10» или
-              «справиться с приступами тревоги». Составим план: какие техники, сколько встреч.
+              На первой полной сессии (60 минут) определим конкретную цель работы: снижение тревоги, управление приступами, работа с навязчивыми мыслями. Составим план: какие техники и шаги.
             </p>
           </div>
         </div>
@@ -428,7 +427,7 @@
         <div class="step">
           <div class="step__number">3</div>
           <div class="step__content">
-            <h3 class="step__title">8-15 сессий с результатом</h3>
+            <h3 class="step__title">Регулярные сессии с конкретными результатами</h3>
             <p class="step__description">
               Каждая встреча — конкретные техники и домашние задания. Отслеживаем прогресс по шкалам.
               <strong>Вы не станете зависимы от терапевта.</strong> Моя задача — научить вас справляться самостоятельно.
@@ -483,9 +482,9 @@
           </div>
 
           <ul class="pricing-card__features">
-            <li>Полный курс КПТ — устойчивый результат</li>
+            <li>Полный курс КПТ</li>
             <li>Приоритетная запись</li>
-            <li>Гарантия: частичный возврат, если нет прогресса*</li>
+            <li>Прозрачные условия работы и поддержка на каждом этапе</li>
           </ul>
 
           <div class="pricing-card__cta">
@@ -499,7 +498,7 @@
 
       <div class="pricing__note" style="text-align: center; margin-top: 24px; color: #666; font-size: 14px;">
         Оплата: карта, СБП, USDT. Отмена за 24 часа — без штрафа.<br>
-        *После 5 сессий при выполнении домашних заданий.
+        Все условия работы обсуждаются на вводной встрече.
       </div>
     </div>
   </section>
@@ -513,16 +512,15 @@
         <div class="faq-item">
           <h3 class="faq-item__question">«А вдруг мне не поможет?»</h3>
           <div class="faq-item__answer">
-            <p>КПТ — научно обоснованный метод работы с тревожными расстройствами. Но я не беру всех подряд.</p>
-            <p>На бесплатной диагностике мы поймём, подходит ли вам именно этот метод. Если нет — скажу честно и дам направление.</p>
+            <p>КПТ считается одним из самых эффективных подходов для работы с тревожными расстройствами, признан ВОЗ. Но я не беру всех подряд.</p>
+            <p>На вводной встрече мы поймём, подходит ли вам именно этот метод. Если нет — скажу честно и дам направление.</p>
           </div>
         </div>
 
         <div class="faq-item">
           <h3 class="faq-item__question">«Это дорого»</h3>
           <div class="faq-item__answer">
-            <p><strong>45 000 ₽ за 3 месяца = избавление от проблемы, которая мешает годами.</strong></p>
-            <p>Сравните: психиатр + лекарства = 5-10 000 ₽/месяц постоянно. Потеря продуктивности на работе — ?</p>
+            <p><strong>Инвестиция в своё спокойствие окупается качеством жизни и продуктивностью.</strong> Мы работаем на результат, который вы сможете поддерживать сами.</p>
           </div>
         </div>
 
