--- a/public/v/index.html
+++ b/public/v/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <meta charset="UTF-8">
-  <meta name="robots" content="noindex,nofollow">
-  <meta http-equiv="refresh" content="0;url=/v/a/">
-  <title>Redirecting...</title>
-</head>
-<body>
-  <p>Redirecting to <a href="/v/a/">main page</a>...</p>
-</body>
-</html>
+<!doctype html><html lang=ru><head><meta charset=UTF-8><meta name=robots content="noindex,nofollow"><meta http-equiv=refresh content="0;url=/v/a/"><title>Redirecting...</title></head><body><p>Redirecting to <a href=/v/a/>main page</a>...</p></body></html>
