--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -522,7 +522,7 @@
         <div class="step__content">
           <h3 class="step__title">Закрепление результата</h3>
           <p class="step__description">
-            Когда цели достигнуты, мы переходим к завершению работы: подводим итоги, создаем план поддержания достигнутых изменений, договариваемся о поддерживающих встречах (если нужно). Вы уходите с набором инструментов на всю жизнь.
+            Когда цели достигнуты, мы переходим к завершению работы: подводим итоги, создаем план поддержания достигнутых изменений, договариваемся о поддерживающих встречах (если нужно). Вы получите набор инструментов для самостоятельной поддержки изменений.
           </p>
         </div>
       </div>
@@ -557,7 +557,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Анна, 32 года</div>
-            <div class="testimonial-card__timeline">10 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -580,7 +580,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Дмитрий, 28 лет</div>
-            <div class="testimonial-card__timeline">12 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -603,7 +603,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Екатерина, 41 год</div>
-            <div class="testimonial-card__timeline">15 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -626,7 +626,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Сергей, 35 лет</div>
-            <div class="testimonial-card__timeline">14 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -649,7 +649,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Мария, 29 лет</div>
-            <div class="testimonial-card__timeline">8 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -672,7 +672,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Ольга, 38 лет</div>
-            <div class="testimonial-card__timeline">12 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -695,7 +695,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Алексей, 44 года</div>
-            <div class="testimonial-card__timeline">10 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -709,7 +709,7 @@
                 <strong>Процесс:</strong> 10 встреч, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна
               </div>
               <div class="detail">
-                <strong>Результат:</strong> Засыпает за 20 минут, сон стал крепким, уровень тревоги заметно снизился
+                <strong>Результат:</strong> Стало значительно легче засыпать, сон стал более крепким, уровень тревоги заметно снизился
               </div>
             </div>
           </div>
@@ -718,7 +718,7 @@
         <div class="testimonial-card">
           <div class="testimonial-card__header">
             <div class="testimonial-card__author">Виктория, 26 лет</div>
-            <div class="testimonial-card__timeline">9 встреч</div>
+            <div class="testimonial-card__timeline">Курс работы</div>
           </div>
 
           <div class="testimonial-card__content">
@@ -833,7 +833,7 @@
         <li><strong>Оплата:</strong> Перевод на карту, СБП или другие способы оплаты.</li>
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
-        <li><strong>* Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
+        <li><strong>Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
       </ul>
     </div>
 
@@ -984,7 +984,7 @@
           <div class="quiz__info-divider"></div>
 
           <p class="quiz__info-text quiz__info-text--secondary">
-            <strong>После первой встречи</strong> вы решите, хотите ли продолжить консультации.<br>
+            <strong>После первой встречи</strong> вы решите, хотите ли продолжить консультации.
             Дальнейшие сессии — платные:
           </p>
 
@@ -1004,14 +1004,13 @@
     <div class="quiz__navigation">
       <button class="quiz__back-btn" id="quiz-back-btn" style="display: none;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
         </svg>
         Назад
       </button>
     </div>
   </div>
 </div>
-
 
     <div class="cta-final__buttons">
       <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B2%D0%B2%D0%BE%D0%B4%D0%BD%D1%83%D1%8E&#43;%D0%B2%D1%81%D1%82%D1%80%D0%B5%D1%87%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
@@ -1184,7 +1183,7 @@
       <div class="footer__section">
         <h3 class="footer__title">О методе</h3>
         <p class="footer__text">
-          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод помощи при тревожных расстройствах.
+          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод помощи при тревожных состояниях.
         </p>
       </div>
     </div>
@@ -1210,10 +1209,9 @@
 
       <div class="footer__disclaimer">
         <p class="disclaimer__text">
-          <strong>Медицинский дисклеймер:</strong> Информация на этом сайте не заменяет консультацию врача.
-          При острых состояниях (суицидальные мысли, психоз, острая депрессия) обратитесь за медицинской помощью к
-          психиатру.
-          Психотерапия не является медицинской услугой и не лечит психические заболевания.
+          Информация на этом сайте носит ознакомительный характер и не заменяет консультацию специалиста.
+          При острых состояниях или угрозе безопасности обратитесь в экстренные службы.
+          Психологическое консультирование не является медицинской услугой.
         </p>
       </div>
     </div>
