--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -1234,7 +1234,7 @@
   
   
   
-  <script src="http://localhost:1313/js/ab-test.min.c4bce755c71d6f9fbc2fc3f3d97f61e3ed6f5f3f1a0919db30f612f276d9d56f.js" integrity="sha256-xLznVccdb5&#43;8L8Pz2X9h4&#43;1vXz8aCRnbMPYS8nbZ1W8="></script>
+  <script src="http://localhost:1313/js/ab-test.min.d8f8a752169570eabc36875bdff6caab13dd26176b1a99ecf9d2d4cc980867ef.js" integrity="sha256-2PinUhaVcOq8Nodb3/bKqxPdJhdrGpns&#43;dLUzJgIZ&#43;8="></script>
   
 
   
