--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -424,7 +424,9 @@
 
       <div class="about__info">
         <div class="about__bio">
-          <p>Меня зовут Ксения, я психолог. Специализируюсь на когнитивно-поведенческом подходе (КПТ) — структурном методе работы с тревожными состояниями и приступами страха. Мой стиль работы — бережный и последовательный. Помогаю клиентам пересмотреть привычные реакции и вернуть качество жизни.</p>
+          <p>Меня зовут Ксения, я психолог. Специализируюсь на когнитивно-поведенческом подходе (КПТ) — структурном
+            методе работы с тревожными состояниями и эпизодами сильной тревоги. Мой стиль работы — бережный и
+            последовательный. Помогаю клиентам пересмотреть привычные реакции и вернуть качество жизни.</p>
         </div>
 
         <div class="about__credentials">
@@ -434,7 +436,7 @@
             <li>Диплом по КПТ (Когнитивно-Поведенческая Терапия)</li>
             <li>Диплом кризисной психологии</li>
             <li>Диплом техник ДПДГ (работа с травматическим опытом)</li>
-            <li>Супервизия и регулярное повышение квалификации</li>            
+            <li>Супервизия и регулярное повышение квалификации</li>
           </ul>
         </div>
 
@@ -660,7 +662,7 @@
                 <strong>До:</strong> Работа 12 часов в день, хроническая усталость, раздражительность, потеря мотивации
               </div>
               <div class="detail">
-                <strong>Процесс:</strong> 8 встреч, фокус на управлении стрессом, границах, ценностях
+                <strong>Процесс:</strong> фокус на управлении стрессом, границах, ценностях
               </div>
               <div class="detail">
                 <strong>Результат:</strong> Сменила работу, научилась говорить «нет», появилось время для себя. Энергия вернулась
@@ -706,7 +708,7 @@
                 <strong>До:</strong> Засыпал по 2-3 часа, постоянные мысли о работе и финансах, раздражительность
               </div>
               <div class="detail">
-                <strong>Процесс:</strong> 10 встреч, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна
+                <strong>Процесс:</strong> техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна
               </div>
               <div class="detail">
                 <strong>Результат:</strong> Стало значительно легче засыпать, сон стал более крепким, уровень тревоги заметно снизился
