--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -731,7 +731,7 @@
                 <strong>До:</strong> Не могла принимать решения, переживала о будущем, избегала перемен
               </div>
               <div class="detail">
-                <strong>Процесс:</strong> 9 встреч, работа с толерантностью к неопределённости, техники осознанности
+                <strong>Процесс:</strong> работа с толерантностью к неопределённости, техники осознанности
               </div>
               <div class="detail">
                 <strong>Результат:</strong> Приняла решение о смене города и работы, перестала бояться изменений, научилась жить в моменте
