--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
+
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <meta name="description"
     content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   <meta name="keywords"
@@ -93,7 +99,7 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/main.min.ba1943b13d2226503c84a0837a2a3b869270484b223a2b03d3879128753e8cb4.css" integrity="sha256-uhlDsT0iJlA8hKCDeio7hpJwSEsiOisD04eRKHU&#43;jLQ=">
+  <link rel="stylesheet" href="http://localhost:1313/css/main.min.52d644a2f41b9158c1e9e4428a28552ab9cb1df5fa73e7bda06ddafe127fded5.css" integrity="sha256-UtZEovQbkVjB6eRCiihVKrnLHfX6c&#43;e9oG3a/hJ/3tU=">
   
 
   
@@ -174,6 +180,10 @@
       webvisor: true, clickmap: true, accurateTrackBounce: true, trackLinks: true
     });
   </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/98271361"
+        style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
   
 
   
@@ -918,7 +928,7 @@
   
   
   
-  <script src="http://localhost:1313/js/analytics.min.8705adfbda40aea036a21ea01f094bc1f93ff50718af1859523d380aa5f764d8.js" integrity="sha256-hwWt&#43;9pArqA2oh6gHwlLwfk/9QcYrxhZUj04CqX3ZNg="></script>
+  <script src="http://localhost:1313/js/analytics.min.bb30ac34eb717254d189a1d69b54d9207233951dfafa6a9284f7f7d6a80ccbb0.js" integrity="sha256-uzCsNOtxclTRiaHWm1TZIHIzlR36&#43;mqShPf31qgMy7A="></script>
   
 
   
